Fix HTML encoding issues in index.html
rankingのtext aline : right

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ canvas{display:block;margin:auto;background:#111}
   padding:15px 30px;font-size:20px;background:lime;color:#000;border:none;
   border-radius:8px;cursor:pointer;display:none;}
 #ranking{position:absolute;left:50%;top:20%;transform:translateX(-50%);
-  color:white;font-size:16px;text-align:center;display:none;}
+  color:white;font-size:16px;text-align:right;display:none;}
 #joystick {
   position: absolute; left:20px; bottom:20px;
   width:160px; height:160px; border-radius:50%; opacity:0.5; background:gray;
@@ -291,3 +291,4 @@ showRanking();
 </script>
 </body>
 </html>
+
